# MiniMem

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HighLevelTodos.txt  LICENSE  NearTermTodos.txt  README.md  TODO.md  build-kmod.sh  meson.build  meson_options.txt  run-perf-test.sh  test-minimem.sh  vm-test-minimem.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  kernel-module-ci.yml  packaging.yml
cmake/: FindMiniMem.cmake
dkms/: Makefile  dkms.conf  install.sh  uninstall.sh
docs/: README.md  action-plan.md  architecture.md  benchmarks.md  candidates.md  feature-registry.md  goal.md  hardware-acceleration.md  how-it-works.md  recovery.md  release-process.md  risks-and-coverage.md  roadmap.md  specialized-compression.md  vram-compression.md
docs/research/: 001-wkdm-memory-compression.md  002-bdi-cache-line-compression.md  003-lz4-lzsse-benchmarks.md  004-zram-zswap-architecture.md  005-macos-memory-compression.md  006-nvcomp-gpu-compression.md  007-delta-encoding-streaming.md  008-ai-workload-compression.md  009-hybrid-wkdm-lz4.md  010-simd-wkdm-feasibility.md  011-block-classification-weights.md  012-compression-advisor-thresholds.md  013-specialized-algorithm-inspiration.md  014-linux-kernel-vram-architecture.md  015-display-stream-compression-dsc.md  016-parallel-decompression-swarming.md  017-sparse-activation-brain-inspired-recall.md  018-memory-overhead-analysis.md  019-pte-marking-and-fault-interception.md  020-kernel-patch-do-swap-page.md  021-zram-baseline-comparison.md  022-kernel-upstreaming-requirements.md  023-per-process-stats.md  024-qemu-vm-test-infrastructure.md  025-scanner-sweep-stock-kernel-investigation.md  README.md
examples/: minimem_compress_buffer.c  minimem_compress_file.c
packaging/aur/minimem/: .SRCINFO  PKGBUILD
packaging/aur/minimem-dkms/: .SRCINFO  PKGBUILD  minimem-dkms.install
packaging/aur/minimem-dkms-systemd/: .SRCINFO  PKGBUILD  minimem-dkms-systemd.install
packaging/debian/: changelog  control  copyright  libminimem-dev.install  libminimem0.install  minimem-cli.install  minimem-dkms-systemd.install  minimem-dkms-systemd.postinst  minimem-dkms-systemd.prerm  minimem-dkms.install  minimem.dsc  rules
packaging/debian/source/: format  options
packaging/fedora/: minimem-rpmlintrc  minimem.spec
packaging/obs/: _service
patches/: minimem-6.18-fault-handler-registration.patch  minimem-6.18-handle-minimem-marker.patch  series
reports/: bench_runner.c
scripts/: build-custom-kernel.sh  collect_page_dumps.sh  dkms-install.sh  dkms-uninstall.sh  local-install.sh  minimem  minimem-stats  publish-all.sh  publish-aur.sh  publish-debian.sh  publish-fedora.sh  publish-obs.sh  release.sh  setup-github-protection.sh
src/kernel/: Makefile  minimem_compat.h  minimem_compat_check.c  minimem_compat_check.h  minimem_compress.c  minimem_compress.h  minimem_fault.c  minimem_fault.h  minimem_hook.c  minimem_hook.h  minimem_main.c  minimem_map.c  minimem_map.h  minimem_mmu.c  minimem_mmu.h  minimem_parallel.c  minimem_parallel.h  minimem_platform.h  minimem_proc_stats.c  minimem_proc_stats.h  minimem_pte.h  minimem_scanner.c  minimem_scanner.h  minimem_shrinker.c  minimem_shrinker.h  minimem_zswap.c  minimem_zswap.h
src/lib/: advisor.c  advisor.h  minimem.h  registry.c  test_data.c  test_data.h
src/lib/compressors/: ai_weights.c  ai_weights.h  bdi.c  bdi.h  block_class.c  block_class.h  delta.c  delta.h  lz4_wrap.c  lz4_wrap.h  lzsse8.c  lzsse8.h  same_page.c  same_page.h  wkdm.c  wkdm.h  wkdm64.c  wkdm64.h  zstd_dict.c  zstd_dict.h
src/vram/: minimem_vram.c  minimem_vram.h
systemd/: minimem-load.service  minimem.service
systemd/modules-load.d/: minimem.conf
tests/: test_dkms_packaging.sh
tests/kernel/: kselftest-minimem.sh  minimem_e2e_test.sh  test_cpu_overhead.c  test_drain_restore.c  test_minimem_kernel.c  test_perf_harness.c  test_scanner_roundtrip.sh  test_stress_concurrent.c  test_stress_pressure.c  test_stress_unload.c  test_transparent_compress.sh  test_transparent_e2e.c  test_transparent_kprobe.sh
tests/lib/: bench_harness.c  bench_harness.h  test_acceptance.c  test_algorithms.c  test_data_loaders.c  test_lz4.c  test_lzsse8.c  test_roundtrip.h
tests/vram/: test_vram_roundtrip.c
